Improve text and bump version
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/hm.bib
+++ b/hm.bib
@@ -27,6 +27,15 @@
 Bibliography}
 }
 
+@book{book:amr,
+  doi       = {10.1007/978-1-4612-1029-0},
+  url       = {https://doi.org/10.1007%2F978-1-4612-1029-0},
+  year      = 1988,
+  publisher = {Springer New York},
+  author    = {Ralph Abraham and Jerrold E. Marsden and Tudor Ratiu},
+  title     = {Manifolds, Tensor Analysis, and Applications}
+}
+
 @book{book:arnold,
   title     = {Mathematical methods of classical mechanics},
   author    = {Arnold, Vladimir I.},
@@ -96,6 +105,7 @@ Bibliography}
   doi       = {10.1007/978-3-662-55774-7}
 }
 
+
 @book{book:laplace,
   author = {Laplace, Pierre Simon},
   title  = {A Philosophical Essay on Probabilities},
@@ -103,7 +113,6 @@ Bibliography}
   editor = {Dover Publications, New York},
   year   = {1951}
 }
-
 
 @book{book:lee,
   title     = {Introduction to Smooth Manifolds},
